--- a/publication.html
+++ b/publication.html
@@ -46,6 +46,25 @@
 
 <tr>
 <td width="35%" height=150>
+<a href="https://arxiv.org/abs/2404.16972">
+<img src="aimerykong_files/crisp.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2404.16972"><b>CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</b></a>
+<br>
+S. Shafique, S. Kong, C. Fowlkes
+<br>
+In ECCV, 2024<br>
+[<a href="https://arxiv.org/abs/2404.16972">paper</a>]
+[<a href="https://github.com/Samia067/CriSp">code</a>]
+<br>
+</td>
+
+
+
+<tr>
+<td width="35%" height=150>
 <a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">
 <img src="aimerykong_files/KD-dino.jpg" height="120"  border="0">
 </a><br>
@@ -58,33 +77,10 @@ Y. Wang, L. Cheng, M. Duan, Y. Wang, Z. Feng, S. Kong
 <br>
 In ECCV, 2024
 <br>
-[<a href="https://arxiv.org/abs/2305.17007">preprint</a>]
+[<a href="https://arxiv.org/abs/2305.17007">paper</a>]
 [<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">github</a>]
 <br>
 </td>
-
-
-
-
-
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2404.16972">
-<img src="aimerykong_files/crisp.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2404.16972"><b>CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</b></a>
-<br>
-S. Shafique, S. Kong, C. Fowlkes
-<br>
-In ECCV, 2024<br>
-[<a href="https://arxiv.org/abs/2404.16972">preprint</a>]
-[<a href="https://github.com/Samia067/CriSp">code</a>]
-<br>
-</td>
-
-
 
 
 	
@@ -101,7 +97,7 @@ T. Liu, H. Zhang, S. Parashar, S. Kong
 <br>
 <a href="https://arxiv.org/abs/2406.11148">arXiv:2406.11148</a>, 2024<br>
 [<a href="https://tian1327.github.io/SWAT/">website</a>] 
-[<a href="https://arxiv.org/abs/2406.11148">preprint</a>] 
+[<a href="https://arxiv.org/abs/2406.11148">paer</a>] 
 [<a href="https://github.com/tian1327/SWAT">code</a>]
 <br>
 </td>	
@@ -160,12 +156,12 @@ In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024 (<font color=ff3399
 
 <tr>
 <td width="35%" height=150>
-<a href="https://doi.org/10.1145/3641519.3657522">
+<a href="https://arxiv.org/abs/2407.06114v1">
 <img src="aimerykong_files/UUO-mocap.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://res.cloudinary.com/hes7dykgv/image/upload/v1716166902/Documents/ennwo812muxljckwcooz.pdf"><b>Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</b></a>
+<a href="https://arxiv.org/abs/2407.06114v1"><b>Towards Unstructured Unlabeled Optical Mocap: A Video Helps!</b></a>
 <br>
 N. Milef, J. Keyser, S. Kong
 <br>
@@ -173,7 +169,7 @@ In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
 [<a href="http://www.nicholasmilef.com/projects/towards_unstructured_unlabeled_optical_mocap">website</a>]
 [<a href="https://www.youtube.com/watch?v=FVAwfc5vXV0">video demo</a>] 
 [<a href="https://github.com/NicholasMilef/UUO-Mocap">code</a>]
-[<a href="https://res.cloudinary.com/hes7dykgv/image/upload/v1716166902/Documents/ennwo812muxljckwcooz.pdf">paper</a>] 
+[<a href="https://arxiv.org/abs/2407.06114v1">paper</a>] 
 [<a href="https://drive.google.com/drive/folders/1S-pHcope9VYS-h9ye2LlV2jpfYYEXELI?usp=drive_link">data</a>]
 <br>
 </td>	
@@ -215,6 +211,7 @@ Y. Zhao, H. Ma, S. Kong, C. Fowlkes
 In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2312.04117">paper</a>]
 [<a href="https://github.com/IT3DEgo/IT3DEgo/">code</a>]
+[<a href="https://drive.google.com/file/d/1VVszWG4mmm0g3ai3EoZw-3cGNBmZCN-9/view?usp=sharing">data</a>]
 <br>
 </td>
 		
