--- a/publication.html
+++ b/publication.html
@@ -56,7 +56,9 @@
 S. Shafique, S. Kong, C. Fowlkes
 <br>
 In ECCV, 2024<br>
+[<a href="https://github.com/Samia067/CriSp">webpage</a>]
 [<a href="https://arxiv.org/abs/2404.16972">paper</a>]
+[<a href="https://github.com/Samia067/CriSp?tab=readme-ov-file#datasets">dataset</a>]
 [<a href="https://github.com/Samia067/CriSp">code</a>]
 <br>
 </td>
@@ -141,8 +143,10 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 J. Shi, G. Gare, J. Tian, S. Chai, Z. Lin, A. Vasudevan, D. Feng, F. Ferroni, S. Kong
 <br>
 In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024 (<font color=ff3399>oral presentation</font>)<br>
+[<a href="https://elvishelvis.github.io/papers/lca/">webpage</a>]
 [<a href="https://openreview.net/forum?id=HPXRzM9BYZ">paper</a>] 
 [<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
+[<a href="https://elvishelvis.github.io/papers/lca/ICML24_LCA_poster.pdf">poster</a>]
 <br>
 </td>	
 
