--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Congratulations to <a href="https://www.linkedin.com/in/shubhamprshr">Shubham</a
 
 <li>
 <p>
-Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a>, Qianqian and <a href="https://nahyunkwon.github.io/">Nahyun</a> on the <a href="https://nips.cc/Conferences/2023"  target="_blank">NeurIPS'23 
+Congratulations to <a href="https://ics.uci.edu/~yunhaz5/">Yunhan</a>, <a href="https://shenqq377.github.io/">Qianqian</a> and <a href="https://nahyunkwon.github.io/">Nahyun</a> on the <a href="https://nips.cc/Conferences/2023"  target="_blank">NeurIPS'23 
 <img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="35"></a> 
 	paper "<a href="https://github.com/insdet/instance-detection"  target="_blank">A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</a>"! (10/17/2023)
 </a>
