--- a/group.html
+++ b/group.html
@@ -36,6 +36,9 @@
 		<li><a href="https://www.linkedin.com/in/tian1327/">Tian Liu</a> (PhD at TAMU)</li>
 		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="./">Tong Wang</a> (PhD at UMacau)</li>
+		<li><a href="./">Hanxin Wang</a> (PhD at UMacau)</li>
+		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU)</li>
+		<li><a href="https://github.com/PardisTaghavi">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
@@ -64,6 +67,7 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
+		<li>yupeng tong  (UMacau)</li>
 		<li>Yoger Un Lok Chen (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
 		<li>Anna Yuting Cao (UMacau; now MS at HKU)</li>
