--- a/index.html
+++ b/index.html
@@ -31,20 +31,25 @@
 					<img class="img-responsive img-rounded" src="./aimerykong_files/profile_shu.jpg">
 				</div>
 				<div class="col-sm-10">
-        <p style="font-size:16px;font-family:Times"> I am on the faculty of <a href="https://www.fst.um.edu.mo/">FST</a>,  <a href="https://www.um.edu.mo/">University of Macau</a>, and <a href="https://engineering.tamu.edu/cse/index.html">CSE</a>,  <a href="https://www.tamu.edu/">Texas A&M University</a>.
+        <p style="font-size:16px;font-family:Times"> I am on the faculty of 
+		<a href="https://www.fst.um.edu.mo/">FST</a>,  
+		<a href="https://www.um.edu.mo/">University of Macau</a>, 
+		and <a href="https://engineering.tamu.edu/cse/index.html">CSE</a>, 
+		<a href="https://www.tamu.edu/">Texas A&M University</a>.
 		  I lead the <a href="group.html">Computer Vision Lab</a>. 
 		  I did my postdoc training at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, 
 		  working with <a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>. 
-		  I received my PhD from <a href="http://www.uci.edu/">UC-Irvine</a>, where I worked with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
+		  I received my PhD from <a href="http://www.uci.edu/">UC-Irvine</a>, working with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
 	</p>
 	
 	<p style="font-size:16px;font-family:Times">
-		My research lies in <strong>Computer Vision</strong>, and its interactions with other fields (e.g., machine learning, robotics, NLP, HCI, and graphics), broad
+		My research lies in <strong>Computer Vision</strong> and its interactions with other fields (e.g., ML, NLP, HCI, robotics, and graphics), broad
 		applications (e.g., AR/VR, autonomous driving, etc.), and diverse disciplines (e.g., biology, paleoecology, psychology, special education, etc.). 
-		My current research focus is on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
-		My recent paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
-		I also actively apply my algorithms to interdisciplinary research including building a high-throughput pollen analysis system,
-		which was featured by the National Science Foundation as that “<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
+		My current research focuses on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
+		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
+		Myprevious work that applied AI to interdisciplinary research built a high-throughput pollen analysis system,
+		which was featured by the National Science Foundation as that 
+		“<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
 	</p>
 
 
