--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 					
 	<p style="font-size:16px;font-family:Times">
 		<font color="#8B0000">
-			I am actively looking for self-motivated PhD students at <a href="https://www.fst.um.edu.mo/">CIS, FST, University of Macau</a>.
+			I am actively looking for self-motivated PhD students at <a href="https://grs.um.edu.mo/index.php/prospective-students/doctoral-degrees-programmes/">CIS, FST, University of Macau</a>.
 			PhD students will be fully funded with fellowships.
 		</font>
-			I am NOT actively looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions.html">CSE, TAMU</a>.
+			I am NOT actively looking for PhD students at <a href="https://engineering.tamu.edu/cse/admissions-and-aid/graduate-admissions/index.html">CSE, TAMU</a>.
 		
 	</p>
 
