--- a/group.html
+++ b/group.html
@@ -47,6 +47,7 @@
 		<li><a href="https://github.com/PardisTaghavi">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>
 		<li><a href="./">Runzhi Wang</a> (Master at TAMU, co-adivsed by Jiang Hu)</li>
+		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan Hu)</li>
 
 		<br><br>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
@@ -58,7 +59,6 @@
 		<li><a href="https://aimerykong.github.io/group.html">Shubham Gupta</a> (Master at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="https://scholar.google.com/citations?user=asHobe0AAAAJ&hl=en">Jia Shi</a> (MSCV at CMU; now at Waymo)</li>
 		<li><a href="https://g-meghana-reddy.github.io/">Meghana Reddy Ganesina</a> (MSCV at CMU; now at Zoox)</li>
-		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU)</li>
 		<li><a href="https://anirudh-chakravarthy.github.io/">Anirudh S Chakravarthy</a> (MSCV at CMU; now at Cruise)</li>
 		<li><a href="https://jamie725.github.io/website/index.html">Yi-Ting Chen</a> (MSCV at CMU, now PhD at UMD)</li>
 		<li><a href="https://derrickwanglf.github.io/">Linfeng Wang</a> (Master at UCI, now at Microsoft)</li>
