--- a/publication.html
+++ b/publication.html
@@ -1350,6 +1350,20 @@ Pattern Recognition Letters, 2012
 <h3>Abstract/Workshop Papers</h3>
 <ul>
 
+
+	
+<li>
+<div class="publication">
+<p> S. Parashar, Z.  Lin, T.  Liu, X.  Dong, Y.  Li, D.  Ramanan, J.  Caverlee, and S. Kong, "<font color=#AF7817>Deep learning approaches to the phylogenetic placement of fossil pollen morphotypes</font>", 
+	<em>ICML 2024 Workshop on Data-centric Machine Learning Research (DMLR): Datasets for Foundation Models</em>, Vienna, Austria; July 2024.
+<br>
+</p>
+</div>
+</li>
+
+
+	
+	
 <li>
 <div class="publication">
 <p> S. W. Punyasena, M. É. Adaïmé, and S. Kong, "<font color=#AF7817>Deep learning approaches to the phylogenetic placement of fossil pollen morphotypes</font>", 
