--- a/publication.html
+++ b/publication.html
@@ -1354,7 +1354,8 @@ Pattern Recognition Letters, 2012
 	
 <li>
 <div class="publication">
-<p> S. Parashar, Z.  Lin, T.  Liu, X.  Dong, Y.  Li, D.  Ramanan, J.  Caverlee, and S. Kong, "<font color=#AF7817>Deep learning approaches to the phylogenetic placement of fossil pollen morphotypes</font>", 
+<p> S. Parashar, Z.  Lin, T.  Liu, X.  Dong, Y.  Li, D.  Ramanan, J.  Caverlee, and S. Kong, 
+	"<font color=#AF7817>The Neglected Tails in Vision-Language Models</font>", 
 	<em>ICML 2024 Workshop on Data-centric Machine Learning Research (DMLR): Datasets for Foundation Models</em>, Vienna, Austria; July 2024.
 <br>
 </p>
