--- a/publication.html
+++ b/publication.html
@@ -1356,7 +1356,7 @@ Pattern Recognition Letters, 2012
 <div class="publication">
 <p> S. Parashar, Z.  Lin, T.  Liu, X.  Dong, Y.  Li, D.  Ramanan, J.  Caverlee, and S. Kong, 
 	"<font color=#AF7817>The Neglected Tails in Vision-Language Models</font>", 
-	<em>ICML 2024 Workshop on Data-centric Machine Learning Research (DMLR): Datasets for Foundation Models</em>, Vienna, Austria; July 2024.
+	<em><a href="https://dmlr.ai/cfp-icml24/https://dmlr.ai/cfp-icml24/">ICML 2024 Workshop on Data-centric Machine Learning Research (DMLR): Datasets for Foundation Models</a></em>, Vienna, Austria; July 2024.
 <br>
 </p>
 </div>
