--- a/publication.html
+++ b/publication.html
@@ -138,13 +138,13 @@ A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, 
 </a><br>
 </td>
 <td>
-<a href="./"><b>LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</b></a>
+<a href="https://arxiv.org/abs/2407.16067"><b>LCA-on-the-Line: Benchmarking Out of Distribution Generalization with Class Taxonomies</b></a>
 <br>
 J. Shi, G. Gare, J. Tian, S. Chai, Z. Lin, A. Vasudevan, D. Feng, F. Ferroni, S. Kong
 <br>
 In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024 (<font color=ff3399>oral presentation</font>)<br>
 [<a href="https://elvishelvis.github.io/papers/lca/">webpage</a>]
-[<a href="https://openreview.net/forum?id=HPXRzM9BYZ">paper</a>] 
+[<a href="https://arxiv.org/abs/2407.16067">paper</a>] 
 [<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
 [<a href="https://elvishelvis.github.io/papers/lca/ICML24_LCA_poster.pdf">poster</a>]
 <br>
