--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		My current research focuses on <a href="https://vplow.github.io"><strong>Visual Perception via Learning in the Open World (VPLOW)</strong></a>. 
 		My previous paper on this topic was recognized for <a href="https://arxiv.org/abs/2104.02939">Best Paper / Marr Prize at ICCV 2021</a>.
 		My previous work that applied AI to interdisciplinary research built a high-throughput pollen analysis system,
-		which was featured by the National Science Foundation as that 
+		which was featured by the National Science Foundation that 
 		“<a href="https://beta.nsf.gov/news/modern-computational-tools-open-new-era-fossil-pollen-research">opens a new era of fossil pollen research</a>”.
 	</p>
 
