--- a/group.html
+++ b/group.html
@@ -91,6 +91,9 @@
 	
 <h4>Affiliates and Collaborators</h4>
 	<ul>
+		 
+		<li><a href="https://engineering.tamu.edu/mechanical/profiles/langari-reza.html">Reza Langari</a>, Professor, TAMU-ME
+		</li>
 		<li><a href="http://www.jeeeunkim.com/">Jeeeun Kim</a>, Assistant Professor, TAMU-CSE
 		</li>
 		<li><a href="https://directory.education.tamu.edu/view/wenhsuan.chang">Wen-Hsuan Chang</a>, Assistant Professor, TAMU-EPSY
@@ -99,7 +102,7 @@
 		</li>
 		<li><a href="https://people.engr.tamu.edu/huangrh/index.html">Ruihong Huang</a>, Associate Professor, TAMU-CSE
 		</li>
-		<li><a href="https://engineering.tamu.edu/cse/profiles/dsong.html">Dezhen Song</a>, Professor, TAMU-CSE
+		<li><a href="https://mbzuai.ac.ae/study/faculty/dezhen-song/">Dezhen Song</a>, Professor, MBZUAI-Robotics
 		</li>
 		<li><a href="https://cesg.tamu.edu/people-2/faculty/jiang-hu/">Jiang Hu</a>, Professor, TAMU-ECE
 		</li>
