--- a/group.html
+++ b/group.html
@@ -70,7 +70,7 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li>yupeng tong  (UMacau)</li>
+		<li>Yupeng Tong  (UMacau)</li>
 		<li>Yoger Un Lok Chen (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
 		<li>Anna Yuting Cao (UMacau; now MS at HKU)</li>
