--- a/group.html
+++ b/group.html
@@ -49,7 +49,7 @@
 		<li><a href="./">Runzhi Wang</a> (MS at TAMU, co-adivsed by Jiang Hu)</li>
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>
 
-		<br><br>
+		<br>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
 		<li><a href="https://www.ics.uci.edu/~yunhaz5/">Yunhan Zhao</a> (PhD at UCI, co-advised by Charless Fowlkes; now at Google)</li>
@@ -70,6 +70,7 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
+		<li>Joanne Liu (TAMU)</li>
 		<li>Yupeng Tong  (UMacau)</li>
 		<li>Yoger Un Lok Chen (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
