--- a/index.html
+++ b/index.html
@@ -111,11 +111,13 @@
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">
 	<li>
-		[CISC7014] Advanced Topics in Computer Science: Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf
-">syllabus</a>] (Spring 2024, UMacau)
+		[CISC3027] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf">syllabus</a>] (Fall 2024, UMacau)
 	</li>
 	<li>
-		[CISC3027] Special Topics in Computer and Information Science: Visual Perception and Learning in the Open World (Fall 2023, UMacau)
+		[CISC7014] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC7014_2023-2024.pdf">syllabus</a>] (Spring 2024, UMacau)
+	</li>
+	<li>
+		[CISC3027] Visual Perception and Learning in the Open World (Fall 2023, UMacau)
 	</li>
 	<li>
 	[CSCE689] Visual Learning for Visual Recognition (Spring 2023, TAMU)
