--- a/publication.html
+++ b/publication.html
@@ -77,7 +77,7 @@ In ECCV, 2024<br>
 <br>
 Y. Wang, L. Cheng, M. Duan, Y. Wang, Z. Feng, S. Kong
 <br>
-In ECCV, 2024
+In ECCV, 2024 (<font color=ff3399>oral presentation</font>)<br>
 <br>
 [<a href="https://arxiv.org/abs/2305.17007">paper</a>]
 [<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND">github</a>]
