--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@ Congratulations to <a href="https://sites.google.com/site/samiashafique067/">Sam
 <p>
 Congratulations to <a href="https://github.com/WangYZ1608">Yuzhu</a> on the  
 	<a href="https://eccv.ecva.net/"  target="_blank">ECCV<img src="./aimerykong_files/eccv2024-logo.jpg", height="25"></a>
-	paper "<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND"  target="_blank">Improving Knowledge Distillation via Regularizing Feature Norm and Direction</a>"! (7/1/2024)
+	paper "<a href="https://github.com/WangYZ1608/Knowledge-Distillation-via-ND"  target="_blank">Improving Knowledge Distillation via Regularizing Feature Norm and Direction</a>", 
+	which is accepted for <font color=ff3399>oral presentation</font>! (7/1/2024)
 </a>
 </li>
 	
