--- a/publication.html
+++ b/publication.html
@@ -53,7 +53,7 @@
 <td>
 <a href="https://arxiv.org/abs/2404.16972"><b>CriSp: Leveraging Tread Depth Maps for Enhanced Crime-Scene Shoeprint Matching</b></a>
 <br>
-S. Shafique, S. Kong, C. Fowlkes
+S. Shafique, S. Kong<sup>*</sup>, C. Fowlkes<sup>*</sup>
 <br>
 In ECCV, 2024<br>
 [<a href="https://github.com/Samia067/CriSp">webpage</a>]
@@ -190,7 +190,7 @@ In <a href="https://s2024.siggraph.org/">SIGGRAPH</a>, 2024<br>
 <td>
 <a href="https://arxiv.org/abs/2401.12425"><b>The Neglected Tails of Vision-Language Models</b></a>
 <br>
-S. Parashar, Z. Lin, T. Liu, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
+S. Parashar*, Z. Lin*, T. Liu*, X. Dong, Y. Li, D. Ramanan, J. Caverlee, S. Kong
 <br>
 In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://shubhamprshr27.github.io/neglected-tails-of-vlms/">webpage</a>]
@@ -231,7 +231,7 @@ In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 <td>
 <a href="https://arxiv.org/abs/2312.03818"><b>Alpha-CLIP: A CLIP Model Focusing on Wherever You Want</b></a>
 <br>
-Z. Sun, Y. Fang, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
+Z. Sun*, Y. Fang*, T. Wu, P. Zhang, Y. Zang, S. Kong, Y. Xiong, D. Lin, J. Wang
 <br>
 In <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR</a>, 2024<br>
 [<a href="https://arxiv.org/abs/2312.03818">paper</a>] 
@@ -333,7 +333,7 @@ arXiv:2404.01064, 2024<br>
 <a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via 2D Late Fusion
 </b></a>
 <br>
-Y. Ma, N. Peri, S. Wei, W. Hua, D. Ramanan, Y. Li, S. Kong
+Y. Ma*, N. Peri*, S. Wei, W. Hua, D. Ramanan, Y. Li, S. Kong
 <br>
 arXiv:2312.10986, 2024<br>
 [<a href="https://arxiv.org/abs/2312.10986">paper</a>]
@@ -351,7 +351,7 @@ arXiv:2312.10986, 2024<br>
 <a href="https://arxiv.org/abs/2312.14494"><b>Revisiting Few-Shot Object Detection with Vision-Language Models
 </b></a>
 <br>
-A. Madan, N. Peri, S. Kong, D. Ramanan
+A. Madan*, N. Peri*, S. Kong, D. Ramanan
 <br>
 arXiv:2312.14494, 2024<br>
 [<a href="https://arxiv.org/abs/2312.14494">paper</a>]
@@ -397,8 +397,8 @@ In EMNLP, 2023
 <td>
 <a href="https://arxiv.org/abs/2310.19257"><b>A High-Resolution Dataset for Instance Detection with Multi-View Instance Capture</b></a>
 <br>
-<a href="aimerykong_files/insdet.png">Q. Shen</a>,
-<a href="https://ics.uci.edu/~yunhaz5/">Y. Zhao</a>,
+<a href="aimerykong_files/insdet.png">Q. Shen*</a>,
+<a href="https://ics.uci.edu/~yunhaz5/">Y. Zhao*</a>,
 <a href="https://nahyunkwon.github.io/">N. Kwon</a>,
 <a href="https://hcied.info/jeeeunkim.html">J. Kim</a>,
 <a href="aimerykong_files/insdet.png">Y. Li</a>,
