--- a/publication.html
+++ b/publication.html
@@ -145,7 +145,9 @@ In <a href="https://icml.cc/Conferences/2024">ICML</a>, 2024 (<font color=ff3399
 [<a href="https://elvishelvis.github.io/papers/lca/">webpage</a>]
 [<a href="https://arxiv.org/abs/2407.16067">paper</a>] 
 [<a href="https://github.com/ElvishElvis/LCA-on-the-line">code</a>]
-[<a href="https://elvishelvis.github.io/papers/lca/ICML24_LCA_poster.pdf">poster</a>]
+[<a href="https://elvishelvis.github.io/papers/lca/ICML24_LCA_poster.pdf">poster</a>]	
+[<a href="https://elvishelvis.github.io/papers/lca/ICML2024_LCA-on-the-line_slide.pdf">slides</a>]	
+[<a href="https://slideslive.com/39022038/lcaontheline-benchmarking-out-of-distribution-generalization-with-class-taxonomies?ref=speaker-89432">video</a>]
 <br>
 </td>	
 
