--- a/group.html
+++ b/group.html
@@ -15,7 +15,7 @@
 <body>
 
 	<div class="my-container">
-		<h1> Computer Vision Lab (at UMacau / Texas A&M) </h1>
+		<h1> Computer Vision Lab (at UMacau) </h1>
 		<span>research in computer vision, machine learning, robotics, NLP, HCI, graphics, interdisciplinary research (e.g., plant biology, paleoecology, psychology, special education etc.)</span>
 		<!--span>research in computer vision and its interactions with other fields (e.g.,machine learning, robotics, NLP, HCI, and graphics), applications(e.g., AR/VR, self-driving, etc.)  and other interdisciplines (e.g., biology, paleoecology, psychology, special education, etc.) </span-->
 		
