--- a/group.html
+++ b/group.html
@@ -89,7 +89,7 @@
 	</ul>
 
 	
-<h4>Affiliates and Collaborators</h4>
+<!--h4>Affiliates and Collaborators</h4>
 	<ul>
 		 
 		<li><a href="https://engineering.tamu.edu/mechanical/profiles/langari-reza.html">Reza Langari</a>, Professor, TAMU-ME
@@ -132,7 +132,7 @@
 		</li>
 		<li><a href="https://dvl.in.tum.de/team/lealtaixe/">Laura Leal-Taixé</a>, Professor, Technical University of Munich
 		</li>
-	</ul>	
+</ul-->	
 	
 </div>
 </div>
