--- a/publication.html
+++ b/publication.html
@@ -46,16 +46,16 @@
 	
 <tr>
 <td width="35%" height=150>
-<a href="./">
+<a href="https://link.springer.com/article/10.1007/s11263-024-02166-9">
 <img src="aimerykong_files/IJCV2024.jpg" height="120"  border="0">
 </a><br>
 </td>
 <td>
-<a href="https://github.com/g-meghana-reddy/open-world-panoptic-segmentation"><b>Lidar Panoptic Segmentation in an Open World</b></a>
+<a href="https://link.springer.com/article/10.1007/s11263-024-02166-9"><b>Lidar Panoptic Segmentation in an Open World</b></a>
 <br>
 A. S. Chakravarthy, M. R. Ganesina, P. Hu, L. Leal-Taixé, S. Kong, D. Ramanan, A. Osep
 <br>
-<a href="https://link.springer.com/journal/11263">International Journal of Computer Vision (IJCV)</a>, 2024<br>
+<a href="https://link.springer.com/article/10.1007/s11263-024-02166-9">International Journal of Computer Vision (IJCV)</a>, 2024<br>
 [<a href="https://youtu.be/aGaBx5k9f0M">video demo</a>]
 [<a href="https://link.springer.com/article/10.1007/s11263-024-02166-9">paper</a>] 
 [<a href="https://github.com/g-meghana-reddy/open-world-panoptic-segmentation">code</a>]
