--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ Congratulations to <a href="https://github.com/WangYZ1608">Yuzhu</a> on the
 <li>
 <p>
 Congratulations to <a href="https://anirudh-chakravarthy.github.io/">Anirudh</a> and <a href="https://g-meghana-reddy.github.io/">Meghana</a> on the  
-	<a href="https://link.springer.com/journal/11263"  target="_blank">IJCV<img src="./aimerykong_files/logo_ijcv.jpg", height="25"></a>
-	paper "<a href="https://github.com/g-meghana-reddy/open-world-panoptic-segmentation"  target="_blank">Lidar Panoptic Segmentation in an Open World</a>"! (6/4/2024)
+	<a href="https://link.springer.com/article/10.1007/s11263-024-02166-9"  target="_blank">IJCV<img src="./aimerykong_files/logo_ijcv.jpg", height="25"></a>
+	paper "<a href="https://link.springer.com/article/10.1007/s11263-024-02166-9"  target="_blank">Lidar Panoptic Segmentation in an Open World</a>"! (6/4/2024)
 </a>
 </li>
 	
