--- a/publication.html
+++ b/publication.html
@@ -43,6 +43,29 @@
 
 
 
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://github.com/anishmadan23/foundational_fsod">
+<img src="aimerykong_files/revisitFSOD.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.14494"><b>Revisiting Few-Shot Object Detection with Vision-Language Models
+</b></a>
+<br>
+A. Madan*, N. Peri*, S. Kong, D. Ramanan
+<br>
+In NeurIPS Datasets and Benchmarks, 2024<br>
+[<a href="https://arxiv.org/abs/2312.14494">paper</a>]
+[<a href="https://github.com/anishmadan23/foundational_fsod">code</a>]
+[<a href="https://eval.ai/web/challenges/challenge-page/2270/overview">challenge</a>]
+<br>
+</td>
+
+	
+	
 	
 <tr>
 <td width="35%" height=150>
@@ -345,24 +368,7 @@ arXiv:2312.10986, 2024<br>
 <br>
 </td>
 
-
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2312.14494">
-<img src="aimerykong_files/revisitFSOD.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2312.14494"><b>Revisiting Few-Shot Object Detection with Vision-Language Models
-</b></a>
-<br>
-A. Madan*, N. Peri*, S. Kong, D. Ramanan
-<br>
-arXiv:2312.14494, 2024<br>
-[<a href="https://arxiv.org/abs/2312.14494">paper</a>]
-<br>
-</td>
-		
+	
 
 
 
