--- a/publication.html
+++ b/publication.html
@@ -358,10 +358,10 @@ arXiv:2404.01064, 2024<br>
 </a><br>
 </td>
 <td>
-<a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via 2D Late Fusion
+<a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via Multi-Modal Late-Fusion
 </b></a>
 <br>
-Y. Ma*, N. Peri*, S. Wei, W. Hua, D. Ramanan, Y. Li, S. Kong
+Y. Ma*, N. Peri*, S. Wei, W. Hua,  Y. Li,  D. Ramanan, S. Kong
 <br>
 arXiv:2312.10986, 2024<br>
 [<a href="https://arxiv.org/abs/2312.10986">paper</a>]
