--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
 
 
 
+
+
+
+<li>
+<p>
+Congratulations to <a href="https://anishmadan23.github.io/">Anish</a> and <a href="http://www.neeharperi.com/">Neehar</a> on the <a href="https://nips.cc/Conferences/2024"  target="_blank">NeurIPS'24 
+<img src="./aimerykong_files/NeurIPS2022_logo.jpg", height="35"></a> 
+	paper "<a href="https://arxiv.org/abs/2312.14494"  target="_blank">Revisiting Few-Shot Object Detection with Vision-Language Models</a>"! (9/26/2024)
+</a>
+</li>
+
+
 	
 <li>
 <p>
