--- a/publication.html
+++ b/publication.html
@@ -64,7 +64,48 @@ In NeurIPS Datasets and Benchmarks, 2024<br>
 <br>
 </td>
 
+
+
+
+
+<tr>
+<td width="35%" height=150>
+<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1">
+<img src="aimerykong_files/icon_C3C4.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1"><b>Reconstructing the diversity dynamics of paleo-grasslands using deep learning on superresolution images of fossil Poaceae pollen
+</b></a>
+<br>
+MÉ Adaimé, S. Kong, M. Urban,  FA Street-Perrott,  D. Verschuren,  SW. Punyasena
+<br>
+preprint at bioRxiv, 2024<br>
+[<a href="https://www.biorxiv.org/content/10.1101/2024.09.23.612957v1">paper</a>]
+[<a href="https://github.com/paleopollen/Pollen_Diversity_Dynamics">code</a>]
+<br>
+</td>
+
 	
+
+	
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2312.10986">
+<img src="aimerykong_files/LT3D-lateFusion.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via Multi-Modal Late-Fusion
+</b></a>
+<br>
+Y. Ma*, N. Peri*, S. Wei, A. Dave, W. Hua,  Y. Li,  D. Ramanan, S. Kong
+<br>
+arXiv:2312.10986, 2024<br>
+[<a href="https://arxiv.org/abs/2312.10986">paper</a>]
+<br>
+</td>
+
 	
 	
 <tr>
@@ -350,24 +391,6 @@ arXiv:2404.01064, 2024<br>
 
 
 	
-	
-<tr>
-<td width="35%" height=150>
-<a href="https://arxiv.org/abs/2312.10986">
-<img src="aimerykong_files/LT3D-lateFusion.jpg" height="120"  border="0">
-</a><br>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2312.10986"><b>Long-Tailed 3D Detection via Multi-Modal Late-Fusion
-</b></a>
-<br>
-Y. Ma*, N. Peri*, S. Wei, W. Hua,  Y. Li,  D. Ramanan, S. Kong
-<br>
-arXiv:2312.10986, 2024<br>
-[<a href="https://arxiv.org/abs/2312.10986">paper</a>]
-<br>
-</td>
-
 	
 
 
