--- a/publication.html
+++ b/publication.html
@@ -55,7 +55,7 @@
 <a href="https://arxiv.org/abs/2312.14494"><b>Revisiting Few-Shot Object Detection with Vision-Language Models
 </b></a>
 <br>
-A. Madan*, N. Peri*, S. Kong, D. Ramanan
+A. Madan<sup>*</sup>, N. Peri<sup>*</sup>, S. Kong<sup>#</sup>, D. Ramanan<sup>#</sup>
 <br>
 In NeurIPS Datasets and Benchmarks, 2024<br>
 [<a href="https://arxiv.org/abs/2312.14494">paper</a>]
