--- a/publication.html
+++ b/publication.html
@@ -45,6 +45,30 @@
 
 
 
+
+<tr>
+<td width="35%" height=150>
+<a href="https://arxiv.org/abs/2410.01180">
+<img src="aimerykong_files/UALBench-logo.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2410.01180"><b>UAL-Bench: The First Comprehensive Unusual Activity Localization Benchmark</b></a>
+<br>
+H. M. Abdullah, T. Liu, K. Wei, S. Kong, R. Huang
+<br>
+In WACV, 2025<br>
+[<a href="https://arxiv.org/abs/2410.01180">paper</a>]
+[code]
+[data]
+<br>
+</td>
+
+
+
+
+	
+
 <tr>
 <td width="35%" height=150>
 <a href="https://github.com/anishmadan23/foundational_fsod">
@@ -65,6 +89,8 @@ In NeurIPS Datasets and Benchmarks, 2024<br>
 </td>
 
 
+
+	
 
 
 
