--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
 
 
 
+<li>
+<p>
+Congratulations to <a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat</a> on the <a href="https://wacv2025.thecvf.com/"  target="_blank">WACV'25 
+<img src="./aimerykong_files/wacv2025-logo.jpg", height="35"></a> 
+	paper "<a href="https://arxiv.org/abs/2410.01180"  target="_blank">UAL-Bench: The First Comprehensive Unusual Activity Localization Benchmark</a>"! (10/29/2024)
+</a>
+</li>
 
 
 
