--- a/publication.html
+++ b/publication.html
@@ -393,6 +393,7 @@ S. Kong,
 Proceedings of the National Academy of Sciences (PNAS) Nexus, 2024<br>
 [<a href="https://academic.oup.com/pnasnexus/advance-article/doi/10.1093/pnasnexus/pgad419/7471798">paper</a>]
 [<a href="https://www.igb.illinois.edu/article/machine-learning-used-classify-fossils-extinct-pollen">News</a>]
+[<a href="https://phys.org/news/2024-03-biologists-machine-fossils-extinct-pollen.html">news</a>]
 <br>
 </td>
 
