--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Call for demos at <a href="https://cvpr.thecvf.com/Conferences/2024"  target="_b
 	
 <li>
 <p>
-Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a href="https://www.linkedin.com/in/tian1327/">Tian</a>, 
+Congratulations to <a href="https://shubhamprshr27.github.io/">Shubham</a>, <a href="https://tian1327.github.io/">Tian</a>, 
 	and <a href="https://linzhiqiu.github.io/">Zhiqiu</a> on the 
 	<a href="https://cvpr.thecvf.com/Conferences/2024"  target="_blank">CVPR'24
 <img src="./aimerykong_files/cvpr24-logo2.jpg", height="20"></a> 
