--- a/group.html
+++ b/group.html
@@ -45,10 +45,12 @@
 		<li><a href="./">Runzhi Wang</a> (PhD at TAMU, co-adivsed by Jiang Hu)</li>
 		<li><a href="https://github.com/PardisTaghavi">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="./">Kitty Kaiqi Su</a> (MS at UMacau)</li>	
+		<li><a href="./">Hou Un Lei</a> (MS at UMacau)</li>
 		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>		
-		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>
+		
 
 		<br>
+		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>
 		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (MS at TAMU; now PhD student at TAMU)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="https://sites.google.com/site/samiashafique067/">Samia Shafique</a> (PhD at UCI, co-advised by Charless Fowlkes)</li>
@@ -70,7 +72,6 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li>Hou Un Lei (UMacau)</li>
 		<li>Joanne Liu (TAMU)</li>
 		<li>Yupeng Tong  (UMacau)</li>
 		<li>Yoger Un Lok Chen (UMacau; now MS student at Tsinghua)</li>
