--- a/group.html
+++ b/group.html
@@ -79,7 +79,7 @@
 		<li>Anna Yuting Cao (UMacau; now MS at HKU)</li>
 		<li>Bruce Zhuxuan Chen (UMacau; now MS at PolyU)</li>
 		<li>Louise Ruoxuan Li (UMacau)</li>
-		<li><a href="https://github.com/ShadeAlsha">Shaden Alshammari</a> (RISS Fellow at CMU-RI, home institute MIT; now MS student at MIT)</li>
+		<li><a href="https://shadealsha.github.io/">Shaden Alshammari</a> (RISS Fellow at CMU-RI, home institute MIT; now MS student at MIT)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (RISS Fellow at CMU-RI, home institute UMD; now PhD at CMU)</li>
 	</ul>
 	
