--- a/publication.html
+++ b/publication.html
@@ -43,7 +43,23 @@
 
 
 
-
+<tr>
+<td width="35%" height=150>
+<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39">
+<img src="aimerykong_files/SPIE_DCTO2025_thumbnail.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"><b>Automated identification of repeated chip layout patterns</b></a>
+<br>
+R. Wang, S. Kong, L. Wang, Y. Wang, J. Hu
+<br>
+In DTCO and Computational Patterning, 2025<br>
+[<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39">paper</a>]
+[code]
+[data]
+<br>
+</td>
 
 
 <tr>
