--- a/publication.html
+++ b/publication.html
@@ -50,7 +50,7 @@
 </a><br>
 </td>
 <td>
-<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"><b>Automated identification of repeated chip layout patterns</b></a>
+<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"><b>Automated Identification of Repeated Chip Layout Patterns</b></a>
 <br>
 R. Wang, S. Kong, L. Wang, Y. Wang, J. Hu
 <br>
