--- a/index.html
+++ b/index.html
@@ -155,6 +155,14 @@
 
 
 
+<li>
+<p>
+Congratulations to <a href="https://www.linkedin.com/in/runzhi-wang">Runzhi</a> on the <a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"  target="_blank">DTCO and Computational
+	Patterning<img src="./aimerykong_files/SPIE_Lithography_logo.jpg", height="35"></a> 
+	paper "<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"  target="_blank">Automated Identification of Repeated Chip Layout Patterns</a>"! (11/26/2024)
+</a>
+</li>
+
 
 
 
