--- a/publication.html
+++ b/publication.html
@@ -54,7 +54,7 @@
 <br>
 R. Wang, S. Kong, L. Wang, Y. Wang, J. Hu
 <br>
-In DTCO and Computational Patterning, 2025<br>
+In DTCO and Computational Patterning, 2025<br> (<font color=ff3399>oral presentation</font>)<br>
 [<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39">paper</a>]
 [code]
 [data]
