--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Congratulations to <a href="https://www.linkedin.com/in/runzhi-wang">Runzhi</a> 
 	<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"  target="_blank">DTCO and Computational
 	Patterning <img src="./aimerykong_files/SPIE_Lithography_logo.jpg", height="30"></a> 
 	paper "<a href="https://spie.org/advanced-lithography/presentation/Automated-identification-of-repeated-chip-layout-patterns/13425-39"  target="_blank">Automated Identification of Repeated Chip Layout Patterns</a>",
-	which is accepted for <font color=ff3399>oral presentation</font>!! (11/26/2024)
+	which is accepted for <font color=ff3399>oral presentation</font>! (11/26/2024)
 </a>
 </li>
 
