--- a/publication.html
+++ b/publication.html
@@ -225,7 +225,7 @@ T. Liu, H. Zhang, S. Parashar, S. Kong
 <br>
 <a href="https://arxiv.org/abs/2406.11148">arXiv:2406.11148</a>, 2024<br>
 [<a href="https://tian1327.github.io/SWAT/">website</a>] 
-[<a href="https://arxiv.org/abs/2406.11148">paer</a>] 
+[<a href="https://arxiv.org/abs/2406.11148">paper</a>] 
 [<a href="https://github.com/tian1327/SWAT">code</a>]
 <br>
 </td>	
