--- a/publication.html
+++ b/publication.html
@@ -75,8 +75,7 @@ H. M. Abdullah, T. Liu, K. Wei, S. Kong, R. Huang
 <br>
 In WACV, 2025<br>
 [<a href="https://arxiv.org/abs/2410.01180">paper</a>]
-[code]
-[data]
+[<a href="https://github.com/Hasnat79/UAL_Bench">code</a>]
 <br>
 </td>
 
