--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 <h3 style="font-size:20px;font-family:Times">Links</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
 	<li>
+	<a href="https://vplow.github.io/vplow_5th.html">The 5th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'25</a>
+	</li>
+	<li>
 	<a href="https://vplow.github.io/vplow_4th.html">The 4th Open World Vision Workshop: Visual Perception via Learning in an Open World (VPLOW) at CVPR'24</a>
 	</li>
 	<li>
