--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 
 		
 <h3 style="font-size:20px;font-family:Times">Teaching</h3>
-<ul style="font-size:15px;font-family:Times;line-height:18px">
+<ul style="font-size:15px;font-family:Times;line-height:18px">	
+	<li>
+		[CISC7401] Advanced Machine Learning [<a href="./aimerykong_files/2024-2-CISC7401-001-ADVANCED-MACHINE-LEARNING.pdf">syllabus</a>] (Spring 2025, UMacau)
+	</li>
 	<li>
 		[CISC3027] Visual Perception and Learning in the Open World [<a href="./aimerykong_files/CISC3027-2024-2025_Shu-KONG.pdf">syllabus</a>] (Fall 2024, UMacau)
 	</li>
