--- a/publication.html
+++ b/publication.html
@@ -44,6 +44,26 @@
 
 
 
+
+<tr>
+<td width="35%" height=150>
+<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1">
+<img src="aimerykong_files/icon_newPhytologist202501.jpg" height="120"  border="0">
+</a><br>
+</td>
+<td>
+<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
+<br>
+M-E Adaimé, M. A. Urban,  S. Kong,  C. Jaramillo,  S. W. Punyasena
+<br>
+preprint, 2025
+<br>
+[<a href="https://doi.org/10.1101/2025.01.07.631571">paper</a>]
+<br>
+</td>
+
+
+	
 <tr>
 <td width="35%" height=150>
 <a href="https://www.biorxiv.org/content/10.1101/2025.01.05.631390v1">
