--- a/publication.html
+++ b/publication.html
@@ -52,7 +52,7 @@
 </a><br>
 </td>
 <td>
-<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1"><b>Addressing the Open World: Detecting and Segmenting Pollen on Palynological Slides with Deep Learning</b></a>
+<a href="https://www.biorxiv.org/content/10.1101/2025.01.07.631571v1"><b>Pollen Morphology, Deep Learning, Phylogenetics, and the Evolution of Environmental Adaptations in Podocarpus</b></a>
 <br>
 M-E Adaimé, M. A. Urban,  S. Kong,  C. Jaramillo,  S. W. Punyasena
 <br>
