--- a/group.html
+++ b/group.html
@@ -40,7 +40,6 @@
 		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU,  co-advised by Reza Langari)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
-		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
 		<li><a href="./">Runzhi Wang</a> (PhD at TAMU, co-adivsed by Jiang Hu)</li>
 		<li><a href="https://github.com/PardisTaghavi">Anwesha Basu</a> (MS at TAMU)</li>
@@ -50,6 +49,7 @@
 		
 
 		<br>
+		<li><a href="https://scholar.google.com/citations?user=qYMFo1wAAAAJ&hl=en">Marc-Elie Adaime</a> (PhD at UIUC, co-advised by Surangi Punyasena; now Research Fellow at Smithsonian Institution)</li>		
 		<li><a href="https://scholar.google.com/citations?user=eZ4WZmIAAAAJ&hl=en">Anish Madan</a> (MSCV at CMU, co-adivsed by Deva Ramanan)</li>
 		<li><a href="https://shubhamprshr27.github.io/">Shubham Parashar</a> (MS at TAMU; now PhD student at TAMU)</li>
 		<li><a href="https://linzhiqiu.github.io/">Zhiqiu Lin</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
