--- a/group.html
+++ b/group.html
@@ -37,6 +37,7 @@
 		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
 		<li><a href="./">Tong Wang</a> (PhD at UMacau)</li>
 		<li><a href="./">Hanxin Wang</a> (PhD at UMacau)</li>
+		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU,  co-advised by Reza Langari)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
@@ -72,7 +73,7 @@
 	
 <h4>Undergraduate Students</h4>
 	<ul>
-		<li>Joanne Liu (TAMU)</li>
+		<li>Joanne Liu (TAMU, co-advised by Jeeeun Kim)</li>
 		<li>Yupeng Tong  (UMacau)</li>
 		<li>Yoger Un Lok Chen (UMacau; now MS student at Tsinghua)</li>
 		<li>Keiran Xinyu Wang (UMacau; now MS at HKUST)</li>
