--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <li>
 <p>
 Congratulations to <a href="https://www.linkedin.com/in/marc-elie-adaime-8b756270/">Dr. Marc-Élie Adaimé</a> on the successful PhD defense 
-	and the new position as a Research Fellow at Smithsonian Institution <img src="./aimerykong_files/smithsonian-institution.jpg", height="30">! (1/20/2025)
+	and the new position as a Research Fellow at <a href="https://www.si.edu/">Smithsonian Institution <img src="./aimerykong_files/smithsonian-institution.jpg", height="30"></a>! (1/20/2025)
 </a>
 </li>
 
