--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
 
 <ul style="font-size:15px;font-family:Times;line-height:20px">
 
+<li>
+<p>
+Congratulations to <a href="http://www.nicholasmilef.com/">Nick Milef</a> on the successful PhD defense 
+	and the new position as a Research Scientist at Meta</a>! (2/11/2025)
+</a>
+</li>
+
 
 
 <li>
