--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		
 <h3 style="font-size:20px;font-family:Times">Professional activities</h3>
 <ul style="font-size:15px;font-family:Times;line-height:18px">	
-	<li>	<a href="https://neurips.cc/Conferences/2024">Area Chair at NeurIPS'24</a>;
+	<li>	Area Chair at <a href="https://neurips.cc/Conferences/2024">NeurIPS'24</a>, <a href="https://neurips.cc/">NeurIPS'25</a>;
 	</li>
 	<li>	<a href="https://cvpr.thecvf.com/Conferences/2024">Demo Chair at CVPR'24</a>;
 	</li>
