--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <p style="font-size:16px;font-family:Times"> I am on the faculty of 
 		<a href="https://www.fst.um.edu.mo/people/skong/">FST</a>,  
 		<a href="https://www.um.edu.mo/">University of Macau</a><s>, 
-		and <a href="https://engineering.tamu.edu/cse">CSE</a>, 
+		leading the <a href="group.html">Computer Vision Lab</a>. 
+		I was an Assistant Professor in the Department of <a href="https://engineering.tamu.edu/cse">CSE</a> at 
 		<a href="https://www.tamu.edu/">Texas A&M University</a></s>.
-		  I lead the <a href="group.html">Computer Vision Lab</a>. 
 		  I did my postdoc training at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, <a href="https://www.cmu.edu/">CMU</a>, 
 		  working with <a href="http://www.cs.cmu.edu/~deva/">Deva Ramanan</a>. 
 		  I received my PhD from <a href="http://www.uci.edu/">UC-Irvine</a>, working with <a href="http://www.ics.uci.edu/~fowlkes/">Charless Fowlkes</a>.
