--- a/group.html
+++ b/group.html
@@ -34,16 +34,16 @@
 	<ul>
 		<li><a href="http://www.nicholasmilef.com/">Nicholas Milef</a> (PhD at TAMU)</li>
 		<li><a href="https://tian1327.github.io/">Tian Liu</a> (PhD at TAMU)</li>
-		<li><a href="./">Huixin Zhang</a> (PhD at TAMU)</li>
-		<li><a href="./">Tong Wang</a> (PhD at UMacau)</li>
+		<li><a href="https://openreview.net/profile?id=~Huixin_Zhang1">Huixin Zhang</a> (PhD at TAMU)</li>
+		<li><a href="https://scholar.google.com/citations?user=eJ9-T9sAAAAJ&hl=zh-CN">Tong Wang</a> (PhD at UMacau)</li>
 		<li><a href="./">Hanxin Wang</a> (PhD at UMacau)</li>
 		<li><a href="https://abulalarabi.com/">Abul Al Arabi</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://github.com/PardisTaghavi">Pardis Taghavi</a> (PhD at TAMU,  co-advised by Reza Langari)</li>
 		<li><a href="https://nahyunkwon.github.io/">Nahyun Kwon</a> (PhD at TAMU, co-advised by Jeeeun Kim)</li>
 		<li><a href="https://bd.linkedin.com/in/hasnat-md-abdullah">Hasnat Md. Abdullah</a> (PhD at TAMU, co-advised by Ruihong Huang)</li>
 		<li><a href="http://www.neeharperi.com/">Neehar Peri</a> (PhD at CMU, co-advised by Deva Ramanan)</li>
-		<li><a href="./">Runzhi Wang</a> (PhD at TAMU, co-adivsed by Jiang Hu)</li>
-		<li><a href="https://github.com/PardisTaghavi">Anwesha Basu</a> (MS at TAMU)</li>
+		<li><a href="https://www.linkedin.com/in/runzhi-wang/">Runzhi Wang</a> (PhD at TAMU, co-adivsed by Jiang Hu)</li>
+		<li><a href="./">Anwesha Basu</a> (MS at TAMU)</li>
 		<li><a href="./">Kitty Kaiqi Su</a> (MS at UMacau)</li>	
 		<li><a href="./">Hou Un Lei</a> (MS at UMacau)</li>
 		<li><a href="https://github.com/Ezharjan">Alexander Ezharjan</a> (MS at UMacau, co-advised by Cheng-Zhong Xu)</li>		
